improve lists, allow selects to be cleared, fix clear button overlap w/ select icon, fix personal statement to display w/ line breaks, alpha order research interests, remove required from most fields - move research interests and job titles from config to the data dir with other such lookup lists

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1,88 +1,4 @@
-.fake-tab {
-    position: relative;
-    right: calc(-100% + 385px);
-    width: 385px;
-    z-index: 5;
-}
-
-.search-on-a-tab {
-    white-space: nowrap;
-}
-
-.card-with-height .ant-card-body {
-    height: 200px;
-    overflow: auto;
-}
-
-.profile-tabs {
-    margin: 0 0.5em;
-}
-
-.ant-tabs-nav-wrap .ant-tabs-nav-scroll .ant-tabs-nav {
-    width: 100% !important;
-}
-
-.margin-top-10px {
-    margin-top: 10px !important;
-}
-
-.margin-bottom-24px {
-    margin-bottom: 24px !important;
-}
-
-#root {
-    overflow: auto;
-}
-
-/* this is to get rid of : after form item label */
-.profile-input-form>.ant-form-item-label>label::after {
-    /* content: none !important; */
-}
-
-/* .affiliation-row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-} */
-
-
-.ant-select-show-arrow.clear-disabled.ant-select.ant-select-enabled {
-    width: 100%;
-}
-
-/* this forces Organization AutoComplete input field to 100% in 
- AfflicationForm */
-.profile-input-form>.ant-form-item-control-wrapper>.ant-form-item-control {
-    width: 100% !important;
-    background-color: white;
-    cursor: pointer;
-}
-
-.profile-input-form>.ant-form-item-control-wrapper>.ant-form-item-control>span>.ant-select-disabled .ant-select-selection {
-    background: white !important;
-    cursor: pointer;
-}
-
-.clear-disabled>.ant-select-auto-complete.ant-select>.ant-input-disabled {
-    color: rgba(0, 0, 0, .65) !important;
-    background-color: white;
-    cursor: pointer;
-}
-
-.clear-disabled.ant-select-disabled {
-    color: rgba(0, 0, 0, .65) !important;
-    background-color: white;
-    cursor: pointer;
-}
-
-.clear-disabled>.ant-input-disabled {
-    color: rgba(0, 0, 0, .65) !important;
-    background-color: white;
-    cursor: pointer;
-}
-
-.clear-disabled.ant-select-auto-complete.ant-select .ant-input-disabled {
-    color: rgba(0, 0, 0, .65) !important;
-    background-color: white;
-    cursor: pointer;
+.ReactProfileView .ant-select-selection__clear {
+    right: 0;
+    margin-right: -18px;
 }
